--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "main": "server.js",
   "scripts": {
     "test": "playwright test",
-    "start": "node server.js"
+    "start": "node server.js",
+    "tailwind": "tailwindcss -i ./tailwind/input.css -o ./public/style.css --watch"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "@playwright/test": "^1.56.0",
-    "playwright": "^1.56.0"
+    "@tailwindcss/cli": "^4.1.14",
+    "playwright": "^1.56.0",
+    "tailwindcss": "^4.1.14"
   }
 }
