--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@playwright/test": "^1.56.0",
     "@tailwindcss/cli": "^4.1.14",
+    "concurrently": "^9.2.1",
+    "esbuild": "^0.27.0",
     "playwright": "^1.56.0",
     "tailwindcss": "^4.1.14"
   }
